--- a/doc/sphinx/tex/sphinx.sty
+++ b/doc/sphinx/tex/sphinx.sty
@@ -47,17 +47,17 @@
 % \definecolor{VerbatimBorderColor}{rgb}{1,1,1}
 
 % for PDF output, use colors and maximal compression
-\newif\ifsphinxpdfoutput\sphinxpdfoutputfalse
-\ifx\pdfoutput\undefined\else\ifcase\pdfoutput
-  \let\py@NormalColor\relax
-  \let\py@TitleColor\relax
-\else
-   \sphinxpdfoutputtrue
-   \input{pdfcolor}
-   \def\py@NormalColor{\color[rgb]{0.0,0.0,0.0}}
-   \def\py@TitleColor{\color{TitleColor}}
-   \pdfcompresslevel=9
- \fi\fi
+%\newif\ifsphinxpdfoutput\sphinxpdfoutputfalse
+%\ifx\pdfoutput\undefined\else\ifcase\pdfoutput
+%  \let\py@NormalColor\relax
+%  \let\py@TitleColor\relax
+%\else
+%   \sphinxpdfoutputtrue
+%   \input{pdfcolor}
+%   \def\py@NormalColor{\color[rgb]{0.0,0.0,0.0}}
+%   \def\py@TitleColor{\color{TitleColor}}
+%   \pdfcompresslevel=9
+% \fi\fi
 
 % XeLaTeX can do colors, too
 % \ifx\XeTeXrevision\undefined\else
@@ -87,35 +87,35 @@
 % \raggedbottom
 % \sloppy
 % \hbadness = 5000                % don't print trivial gripes
-% 
+%
 % \pagestyle{empty}               % start this way; change for
 % \pagenumbering{roman}           % ToC & chapters
 
 % Use this to set the font family for headers and other decor:
- \newcommand{\py@HeaderFamily}{\sffamily\bfseries}
-% 
+% \newcommand{\py@HeaderFamily}{\sffamily\bfseries}
+%
 % % Redefine the 'normal' header/footer style when using "fancyhdr" package:
- \@ifundefined{fancyhf}{}{
-   % Use \pagestyle{normal} as the primary pagestyle for text.
-   \fancypagestyle{normal}{
-     \fancyhf{}
-     \fancyfoot[LE,RO]{{\py@HeaderFamily\thepage}}
-     \fancyfoot[LO]{{\py@HeaderFamily\nouppercase{\rightmark}}}
-     \fancyfoot[RE]{{\py@HeaderFamily\nouppercase{\leftmark}}}
-     \fancyhead[LE,RO]{{\py@HeaderFamily \@title, \py@release}}
-     \renewcommand{\headrulewidth}{0.4pt}
-     \renewcommand{\footrulewidth}{0.4pt}
-   }
+% \@ifundefined{fancyhf}{}{
+%   % Use \pagestyle{normal} as the primary pagestyle for text.
+%   \fancypagestyle{normal}{
+%     \fancyhf{}
+%     \fancyfoot[LE,RO]{{\py@HeaderFamily\thepage}}
+%     \fancyfoot[LO]{{\py@HeaderFamily\nouppercase{\rightmark}}}
+%     \fancyfoot[RE]{{\py@HeaderFamily\nouppercase{\leftmark}}}
+%     \fancyhead[LE,RO]{{\py@HeaderFamily \@title, \py@release}}
+%     \renewcommand{\headrulewidth}{0.4pt}
+%     \renewcommand{\footrulewidth}{0.4pt}
+%   }
 %   % Update the plain style so we get the page number & footer line,
 %   % but not a chapter or section title.  This is to keep the first
 %   % page of a chapter and the blank page between chapters `clean.'
-   \fancypagestyle{plain}{
-     \fancyhf{}
-     \fancyfoot[LE,RO]{{\py@HeaderFamily\thepage}}
-     \renewcommand{\headrulewidth}{0pt}
-     \renewcommand{\footrulewidth}{0.4pt}
-   }
- }
+%   \fancypagestyle{plain}{
+%     \fancyhf{}
+%     \fancyfoot[LE,RO]{{\py@HeaderFamily\thepage}}
+%     \renewcommand{\headrulewidth}{0pt}
+%     \renewcommand{\footrulewidth}{0.4pt}
+%   }
+% }
 
 % Some custom font markup commands.
 %
@@ -141,7 +141,7 @@
 %   }%
 % }
 % \def\FrameCommand{\mycolorbox}
-% 
+%
 % \renewcommand{\Verbatim}[1][1]{%
 %   % list starts new par, but we don't want it to be set apart vertically
 %   \bgroup\parskip=0pt%
@@ -191,7 +191,7 @@
 %   \@tempdima\linewidth%
 %   \advance\@tempdima \leftmargin\makebox[\@tempdima][l]{#1}%
 % }
-% 
+%
 % \newenvironment{fulllineitems}{
 %   \begin{list}{}{\labelwidth \leftmargin \labelsep 0pt
 %                  \rightmargin 0pt \topsep -\parskip \partopsep \parskip
@@ -202,7 +202,7 @@
 % \optional is used for ``[, arg]``, i.e. desc_optional nodes.
 % \newcommand{\optional}[1]{%
 %   {\textnormal{\Large[}}{#1}\hspace{0.5mm}{\textnormal{\Large]}}}
-% 
+%
 % \newlength{\py@argswidth}
 % \newcommand{\py@sigparams}[2]{%
 %   \parbox[t]{\py@argswidth}{#1\code{)}#2}}
@@ -362,7 +362,7 @@
 %    \addtolength{\leftmargin}{\labelsep}
 %    \renewcommand{\makelabel}{\optionlistlabel}}
 % }{\end{list}}
-% 
+%
 % \newlength{\lineblockindentation}
 % \setlength{\lineblockindentation}{2.5em}
 % \newenvironment{lineblock}[1]
@@ -377,7 +377,7 @@
 % Redefine includgraphics for avoiding images larger than the screen size
 % If the size is not specified.
 % \let\py@Oldincludegraphics\includegraphics
-% 
+%
 % \newbox\image@box%
 % \newdimen\image@width%
 % \renewcommand\includegraphics[2][\@empty]{%
@@ -412,7 +412,7 @@
 %   \py@OldTheindex
 %   \addcontentsline{toc}{chapter}{\indexname}
 % }
-% 
+%
 % % Include hyperref last.
 % \RequirePackage[colorlinks,breaklinks,
 %                 linkcolor=InnerLinkColor,filecolor=OuterLinkColor,
@@ -429,6 +429,8 @@
 % Fix anchor placement for figures with captions.
 % (Note: we don't use a package option here; instead, we give an explicit
 % \capstart for figures that actually have a caption.)
+\RequirePackage{hyperref}
+
 \RequirePackage{hypcap}
 
 % From docutils.writers.latex2e
