update doc for Krause Oliver data

--- a/doc/larch.bib
+++ b/doc/larch.bib
@@ -436,7 +436,6 @@ DOI =  {10.1016/S0969-806X(01)00227-4},
 url = {http://dx.doi.org/10.1016/S0969-806X(01)00227-4},
 }
 
-
 @article{Keski_Krause,
 author  = {Keski-Rahkonen, O. and Krause, M. O.},
 title   = {Total and partial atomic-level widths},
@@ -447,6 +446,18 @@ number  = "2",
 pages   = {139--146},
 url = {{http://dx.doi.org/10.1016/S0092-640X(74)80020-3}}
 }
+
+@article{Krause_Oliver,
+author  = {Krause, M. O. and  Oliver J. H.},
+title   = {Natural widths of atomic $K$ and $L$ levels, $K_\alpha$ X‐ray lines and several $KLL$ Auger lines},
+journal = {Journal of Physical and Chemical Reference Data},
+year    = 1979,
+volume  = "8",
+pages   = {329},
+url = {{https://doi.org/10.1063/1.555595}}
+}
+
+
 
 @article{Waasmaier_Kirfel,
 author = {Waasmaier, D. and Kirfel, A.},
