--- a/doc/larch.bib
+++ b/doc/larch.bib
@@ -448,15 +448,14 @@ url = {{http://dx.doi.org/10.1016/S0092-640X(74)80020-3}}
 }
 
 @article{Krause_Oliver,
-author  = {Krause, M. O. and  Oliver J. H.},
-title   = {Natural widths of atomic $K$ and $L$ levels, $K_\alpha$ X‐ray lines and several $KLL$ Auger lines},
+author  = {Krause, M. O. and Oliver, J. H.},
+title   = "Natural widths of atomic K and L levels, Ka X‐ray lines and several KLL Auger lines",
 journal = {Journal of Physical and Chemical Reference Data},
 year    = 1979,
 volume  = "8",
 pages   = {329},
 url = {{https://doi.org/10.1063/1.555595}}
 }
-
 
 
 @article{Waasmaier_Kirfel,
