add larch ref to larch.bib

--- a/doc/larch.bib
+++ b/doc/larch.bib
@@ -17,6 +17,18 @@
 @string{xbible = "{X-ray Absorption: Principles, Applications,
                   Techniques of {EXAFS}, {SEXAFS}, and {XANES}}"}
 
+
+
+@article{larch2013,
+   author  = "{M. Newville}",
+   title   = "{Larch: An Analysis Package For XAFS And Related Spectroscopies}",
+   journal = {Journal of Physics: Conference Series},
+   year    = "2013",
+   volume  = "430",
+   pages   = "012007",
+   doi = {10.1088/1742-6596/430/1/012007},
+}
+
 @Misc{xafsorg,
   title =  {XAFS.org},
   year  = 2003,
@@ -45,7 +57,7 @@
    volume    = 6,
    pages     = {264--265},
    year      = {1999},
-   url = {{http://dx.doi.org/10.1107/S0909049598018147}}
+   doi = {10.1107/S0909049598018147},
 
 }
 
@@ -68,7 +80,7 @@
    year      = 1993,
    volume    = 48,
    number    = 13,
-   url  = {{http://dx.doi.org/10.1103/PhysRevB.48.9825}}
+   doi = {10.1103/PhysRevB.48.9825},
 }
 
 
@@ -119,7 +131,7 @@
   volume = 72,
   number = 3,
   pages  = {621--654},
-  url = {{http://dx.doi.org/10.1103/RevModPhys.72.621}}
+  doi = {10.1103/RevModPhys.72.621}
 }
 
 @book{KoningsbergerPrins1988,
@@ -177,7 +189,7 @@
    year      = 1991,
    volume    = 113,
    number    = 14,
-   url = {{http://dx.doi.org/10.1021/ja00014a001}}
+   doi = {10.1021/ja00014a001}
 }
 
 
@@ -190,7 +202,7 @@
   year =  1993,
   volume =  47,
   number =  21,
-  url = {{http://dx.doi.org/10.1103/PhysRevB.47.14126}}
+  doi = {10.1103/PhysRevB.47.14126}
 }
 
 
@@ -291,7 +303,8 @@ doi = {10.1107/S0909049504034193},
   volume={702},
   number={2},
   pages={970},
-  url={http://stacks.iop.org/0004-637X/702/i=2/a=970},
+  url = {http://stacks.iop.org/0004-637X/702/i=2/a=970},
+  doi = {0004-637X/702/i=2/a=970},
   year={2009},
 }
 
@@ -306,7 +319,7 @@ Volume = {8},
 Number = {Part 2},
 Pages = {322-324},
 Month = {MAR},
-url = {http://dx.doi.org/10.1107/S0909049500016964},
+doi = {10.1107/S0909049500016964},
 }
 
 
@@ -319,7 +332,7 @@ Year = {2005},
 Volume = {12},
 Number = {Part 4},
 Pages = {537-541},
-url = {{http://dx.doi.org/10.1107/S0909049505012719}},
+doi = {10.1107/S0909049505012719},
 }
 
 
@@ -342,7 +355,7 @@ Volume = {{5}},
 Number = {{Part 2}},
 Pages = {{118-122}},
 Month = {{MAR 1}},
-DOI = {{10.1107/S0909049597019298}},
+DOI = {10.1107/S0909049597019298},
 }
 
 @article{feff6_siz,
@@ -355,7 +368,7 @@ year    = "1995",
 volume  = "52",
 number  = "4",
 pages   = "2995--3009",
-url = {{http://dx.doi.org/10.1103/PhysRevB.52.2995}}
+doi = {10.1103/PhysRevB.52.2995}
 }
 
 @article{Sevillano,
@@ -367,7 +380,7 @@ url = {{http://dx.doi.org/10.1103/PhysRevB.52.2995}}
   volume  = "20",
   number  = "12",
   pages   = "4908--4911",
-  url = {{http://dx.doi.org/10.1103/PhysRevB.20.4908}}
+  doi = {10.1103/PhysRevB.20.4908}
 }
 
 
@@ -444,17 +457,17 @@ year    = 1974,
 volume  = "14",
 number  = "2",
 pages   = {139--146},
-url = {{http://dx.doi.org/10.1016/S0092-640X(74)80020-3}}
+doi = {10.1016/S0092-640X(74)80020-3}
 }
 
 @article{Krause_Oliver,
 author  = {Krause, M. O. and Oliver, J. H.},
-title   = "Natural widths of atomic K and L levels, Ka X‐ray lines and several KLL Auger lines",
+title   = "Natural widths of atomic K and L levels, Ka X-ray lines and several KLL Auger lines",
 journal = {Journal of Physical and Chemical Reference Data},
 year    = 1979,
 volume  = "8",
 pages   = {329},
-url = {{https://doi.org/10.1063/1.555595}}
+doi = {10.1063/1.555595}
 }
 
 
@@ -465,7 +478,7 @@ journal = {Acta Crystallographica A},
 volume = "51",
 pages = {416--431},
 year = 1995,
-url = {http://dx.doi.org/10.1107/S0108767394013292}
+doi = {10.1107/S0108767394013292}
 }
 
 @article{Cromer_Liberman,
@@ -476,7 +489,7 @@ journal = {Acta Crystallographica A},
 volume  = 37,
 pages   = {267--268},
 year    = 1981,
-url     = {http://dx.doi.org/10.1107/S0567739481000600}
+doi     = {10.1107/S0567739481000600}
 }
 
 
@@ -490,7 +503,7 @@ url     = {http://dx.doi.org/10.1107/S0567739481000600}
  number  = 1,
  pages   = "850--853",
  year    = "1992",
- url = {http://dx.doi.org/10.1063/1.1142625}
+ doi     = {10.1063/1.1142625}
 
 }
 
@@ -507,7 +520,6 @@ Number = 4,
 Pages = {597--1048},
 Month = {{JUL-AUG}},
 DOI = {{10.1063/1.1321055}},
-url = {{http://dx.doi.org/10.1063/1.1321055}}
 }
 
 
@@ -542,7 +554,7 @@ url = {http://dx.doi.org/10.1107/S0909049500016290}
  issue = {20},
  year = {2006},
  pages = {6304--6309},
- url = {http://dx.doi.org/10.1021/es061040r},
+ doi = {10.1021/es061040r},
 }
 
 
@@ -664,8 +676,6 @@ DOI = {{10.1107/S0909049511031232}},
 
 
 
-
-
 @article{Codd:1970:RMD:362384.362685,
  author = {Codd, E. F.},
  title = {A relational model of data for large shared data banks},
@@ -697,8 +707,7 @@ DOI = {{10.1107/S0909049511031232}},
  issn = {0001-0782},
  pages = {42--47},
  numpages = {6},
- url = {http://doi.acm.org/10.1145/1562764.1562781},
- doi = {http://doi.acm.org/10.1145/1562764.1562781},
+ doi = {10.1145/1562764.1562781},
  acmid = {1562781},
  publisher = {ACM},
  address = {New York, NY, USA},
@@ -714,7 +723,6 @@ number = 6,
 pages = "655--685",
 month = "Nov",
 doi = {10.1107/S010876739101067X},
-url = {http://dx.doi.org/10.1107/S010876739101067X},
 }
 
 @InBook{HallWestbrook,
@@ -737,7 +745,6 @@ number = "3",
 pages = "276--277",
 month = "May",
 doi = {10.1107/S0909049599000795},
-url = {http://dx.doi.org/10.1107/S0909049599000795},
 }
 
 
@@ -746,7 +753,6 @@ url = {http://dx.doi.org/10.1107/S0909049599000795},
   journal = {Phys. Rev. Lett.},
   author = {Sayers, Dale E. and Stern, Edward A. and Lytle, Farrel W.},
   month = {Nov},
-  url = {http://link.aps.org/doi/10.1103/PhysRevLett.27.1204},
   doi = {10.1103/PhysRevLett.27.1204},
   year = {1971},
   title = {New Technique for Investigating Noncrystalline Structures: Fourier Analysis of the Extended X-Ray\char22{}Absorption Fine Structure},
@@ -790,7 +796,7 @@ key = {HDF GROUP},
 
 
 @article{diffkk,
-  title = {Inclusion of local structure effects in theoretical x-ray resonant scattering amplitudes using     \textit{ab initio}   x-ray-absorption spectra calculations},
+  title = {Inclusion of local structure effects in theoretical x-ray resonant scattering amplitudes using  ab initio x-ray-absorption spectra calculations},
   author = {Cross, J. O. and Newville, M. and Rehr, J. J. and Sorensen, L. B. and Bouldin, C. E. and Watson, G. and Gouder, T. and Lander, G. H. and Bell, M. I.},
   journal = {Phys. Rev. B},
   volume = {58},
