more doc updates

--- a/doc/larch.bib
+++ b/doc/larch.bib
@@ -20,7 +20,7 @@
 
 
 @article{larch2013,
-   author  = "{M. Newville}",
+   author  = {M. Newville},
    title   = "{Larch: An Analysis Package For XAFS And Related Spectroscopies}",
    journal = {Journal of Physics: Conference Series},
    year    = "2013",
@@ -33,13 +33,13 @@
   title =  {XAFS.org},
   year  = 2003,
   key = {XAFS.org},
-  howpublished = {\url{http://xafs.org}}}
+  url = {{http://xafs.org}}}
 
 @Misc{ixasportal,
   title =  {International X-ray Absorption Society},
   key  =  {IXAS},
   year = 2012,
-  howpublished = {\url{http://www.ixasportal.net/}}}
+  url = {{http://www.ixasportal.net/}}}
 
 @article{ATOMS,
   author = {B. Ravel},
@@ -445,7 +445,6 @@ Number = 2,
 Pages = {121--128},
 Month = FEB,
 DOI =  {10.1016/S0969-806X(01)00227-4},
-url = {http://dx.doi.org/10.1016/S0969-806X(01)00227-4},
 }
 
 @article{Keski_Krause,
@@ -540,7 +539,6 @@ Volume = {8},
 Number = {Part 2},
 Pages = {96-100},
 DOI = {10.1107/S0909049500016290},
-url = {http://dx.doi.org/10.1107/S0909049500016290}
 }
 
 
@@ -563,7 +561,7 @@ Author = {Hayashi, H and Kawata, M and Takeda, R and Udagawa, Y and Watanabe, Y
 Title = {{A multi-crystal spectrometer with a two-dimensional position-sensitive
    detector and contour maps of resonant K beta emission in Mn compounds}},
 Journal = {{Journal of Electron Spectroscopy and Related Phenomena}},
-Year = {{2004}},
+Year = {2004},
 Volume = {{136}},
 Number = {{1-2}},
 Pages = {{191-197}},
@@ -573,15 +571,15 @@ DOI = {{10.1016/j.elspec.2004.02.148}},
 @Misc{fluo,
 Author = {Haskel, D.},
 Title = {FLUO},
-howpublished = {\url{http://www.aps.anl.gov/~haskel/fluo.html}},
-Year = {{1999}},
+Year = {1999},
+url =  {{http://www.aps.anl.gov/~haskel/fluo.html}}
 }
 
 
 @Misc{minpack,
 Author = {Garbow, B. S. and Hillstrom, K. E. and M\'ore, J. J.},
 Title = {{MINPACK-1}},
-howpublished = {\url{http://www.netlib.org/minpack}},
+url= {{http://www.netlib.org/minpack}},
 Year = {{1980}},
 }
 
@@ -627,21 +625,21 @@ DOI = {{10.1107/S0909049511031232}},
 @Misc{perl,
   author =  "Wall, L.",
   title =   "{Perl Programming Langauge}",
-  howpublished = {\url{http://perl.org/}},
+  url = {{http://perl.org/}},
   year = 1997,
 }
 
 @Misc{python,
   author =  "G. von Rossum and F. L. Drake",
   title =   "{Python Reference Manual}",
-  howpublished = {\url{http://python.org/}},
+  url = {{http://python.org/}},
   year = 2003,
 }
 
 @Misc{numpy,
   author =  "Oliphant, T. E.",
   title =   "{Numerical Python}",
-  howpublished = {\url{http://numpy.scipy.org/}},
+  url = {{http://numpy.scipy.org/}},
   year = 2006,
 }
 
@@ -649,27 +647,27 @@ DOI = {{10.1107/S0909049511031232}},
   author =   "Jones, E. and Oliphant, T. and Peterson, P. and others",
   title =     {{SciPy}: Open source scientific tools for {Python}},
   year =      {2001},
-  howpublished = {\url{http://scipy.org/}},
+  url = {{http://scipy.org/}},
 }
 
 @Misc{matplotlib,
   author =  "Hunter, J. D.",
   title =   "{matplotlib}",
-  howpublished = {\url{http://matplotlib.sourceforge.net/}},
+  url = {{http://matplotlib.sourceforge.net/}},
   year = 2007,
 }
 
 @Misc{prestopronto,
   author =  "Prestipino, C.",
   title =   "{PrestoPronto}",
-  howpublished = {\url{http://code.google.com/p/prestopronto/}},
+  url = {{http://code.google.com/p/prestopronto/}},
   year = 2011,
 }
 
 @Misc{sixpack,
   author =  "Webb, S. M.",
   title =   "{SixPack}",
-  howpublished = {\url{http://sixpack.sams-xrays.com/}},
+  url = {{http://sixpack.sams-xrays.com/}},
   year = 2006,
 }
 
@@ -763,33 +761,33 @@ doi = {10.1107/S0909049599000795},
 @Misc{data_format_working_group,
   key = "XAS Data Format Working Group",
   title = 	 {Data Format Working Group Wiki},
-  howpublished = {\url{https://github.com/XraySpectroscopy/Data-Format-Working-Group/wiki}},
+  url = {{https://github.com/XraySpectroscopy/Data-Format-Working-Group/wiki}},
   year = 	 2012}
 
 @Misc{hdf_group,
 key = {HDF GROUP},
-  title = 	 {HDF GROUP - HDF5},
-  howpublished = {\url{http://www.hdfgroup.org/HDF5/}},
+  title = {HDF GROUP - HDF5},
+  url = {{http://www.hdfgroup.org/HDF5/}},
   year = 	 2012}
 
 
 @Misc{sqlite,
   author = 	 {Hipp, D. R.},
   title = 	 {SQLite},
-  howpublished = {\url{http://www.sqlite.org.}},
+  url = {{http://www.sqlite.org.}},
   year = 	 2012}
 
 @Misc{xasformat_mailing_list,
   key = {XAS Data Format Working Group},
   title = 	 "XASFORMAT mailing list",
-  howpublished = {\url{http://millenia.cars.aps.anl.gov/mailman/listinfo/xasformat}},
+  url = {{http://millenia.cars.aps.anl.gov/mailman/listinfo/xasformat}},
   year = 	 2012}
 
 
 @Misc{lytle_database,
   author = 	 {Lytle, F. and Boyanov, B. and Segre, S.},
   title = 	 {Farrel Lytle XAFS Database},
-  howpublished = {\url{http://ixs.iit.edu/database}},
+  url = {{http://ixs.iit.edu/database}},
   year = 	 1995
 }
 
@@ -806,7 +804,6 @@ key = {HDF GROUP},
   month = {Nov},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevB.58.11215},
-  url = {http://link.aps.org/doi/10.1103/PhysRevB.58.11215}
 }
 
 @article{Ohta:88,
