--- a/examples/Jupyter/XAFS_Processing.ipynb
+++ b/examples/Jupyter/XAFS_Processing.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,22 +29,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fe2o3_rt1_xmu <Group 0x1c2509e208>\n",
-      "fe3c_rt_xdi <Group 0x1c2509e470>\n",
-      "feo_rt1_xmu <Group 0x1c2509e550>\n"
+      "fe2o3_rt1_xmu <Group 0x7f6e246f0050>\n",
+      "fe3c_rt_xdi <Group 0x7f6e246f0550>\n",
+      "feo_rt1_xmu <Group 0x7f6e246f0790>\n"
      ]
     }
    ],
    "source": [
     "for name, group in project._athena_groups.items():\n",
     "    print(name, group)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **NOTE** For additional features of working with Athena project files -> [IO_Athena_project.ipynb](./IO_Athena_project.ipynb) "
    ]
   },
   {
@@ -466,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
