selection flag not shown by default

--- a/examples/Jupyter/IO_Athena_project.ipynb
+++ b/examples/Jupyter/IO_Athena_project.ipynb
@@ -30,10 +30,10 @@
     {
      "data": {
       "text/html": [
-       "<table><tr><td><b>Group</b></td><td><b>Sel</b></td></tr><tr><td>ozun</td><td>✔</td></tr><tr><td>d_2_42</td><td>✔</td></tr><tr><td>d_4_73</td><td>✔</td></tr><tr><td>d_7_03</td><td>✔</td></tr><tr><td>d_9_33</td><td>✔</td></tr><tr><td>d_20</td><td>✔</td></tr><tr><td>rjbc</td><td>✔</td></tr><tr><td>d_720</td><td>✔</td></tr><tr><td>hqlr</td><td>✔</td></tr><tr><td>Au1_Cl</td><td>✔</td></tr><tr><td>Au3_Cl_aq</td><td>✔</td></tr><tr><td>ixde</td><td>✔</td></tr><tr><td>Au_cyanide</td><td>✔</td></tr><tr><td>nyux</td><td>✔</td></tr><tr><td>Au_sulphide</td><td>✔</td></tr><tr><td>Au_thiosulphate_aq</td><td>✔</td></tr><tr><td>ryzf</td><td>✔</td></tr></table>"
+       "<table><tr><td><b>Group</b></td></tr><tr><td>ozun</td></tr><tr><td>d_2_42</td></tr><tr><td>d_4_73</td></tr><tr><td>d_7_03</td></tr><tr><td>d_9_33</td></tr><tr><td>d_20</td></tr><tr><td>rjbc</td></tr><tr><td>d_720</td></tr><tr><td>hqlr</td></tr><tr><td>Au1_Cl</td></tr><tr><td>Au3_Cl_aq</td></tr><tr><td>ixde</td></tr><tr><td>Au_cyanide</td></tr><tr><td>nyux</td></tr><tr><td>Au_sulphide</td></tr><tr><td>Au_thiosulphate_aq</td></tr><tr><td>ryzf</td></tr></table>"
       ],
       "text/plain": [
-       "<Group 0x7fa929b74210>"
+       "<Group 0x7f9e18ea5090>"
       ]
      },
      "execution_count": 2,
@@ -48,29 +48,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "OrderedDict([('ozun', <Group 0x7fbfb472ed90>),\n",
-       "             ('d_2_42', <Group 0x7fbfb46b5150>),\n",
-       "             ('d_4_73', <Group 0x7fbfb46b5490>),\n",
-       "             ('d_7_03', <Group 0x7fbfb46b5750>),\n",
-       "             ('d_9_33', <Group 0x7fbfb46b5990>),\n",
-       "             ('d_20', <Group 0x7fbfb46b5c10>),\n",
-       "             ('rjbc', <Group 0x7fbfb46b5e50>),\n",
-       "             ('d_720', <Group 0x7fbfb46b40d0>),\n",
-       "             ('hqlr', <Group 0x7fbfb46b4310>),\n",
-       "             ('Au1_Cl', <Group 0x7fbfb46b4510>),\n",
-       "             ('Au3_Cl_aq', <Group 0x7fbfb46b4750>),\n",
-       "             ('ixde', <Group 0x7fbfb46b4990>),\n",
-       "             ('Au_cyanide', <Group 0x7fbfb46b4bd0>),\n",
-       "             ('nyux', <Group 0x7fbfb46b4e10>),\n",
-       "             ('Au_sulphide', <Group 0x7fbfb46bb090>),\n",
-       "             ('Au_thiosulphate_aq', <Group 0x7fbfb46bb2d0>),\n",
-       "             ('ryzf', <Group 0x7fbfb46bb4d0>)])"
+       "OrderedDict([('ozun', <Group 0x7f54acffc7d0>),\n",
+       "             ('d_2_42', <Group 0x7f54acffca10>),\n",
+       "             ('d_4_73', <Group 0x7f54acffcc50>),\n",
+       "             ('d_7_03', <Group 0x7f54acffce50>),\n",
+       "             ('d_9_33', <Group 0x7f54acff60d0>),\n",
+       "             ('d_20', <Group 0x7f54acff6350>),\n",
+       "             ('rjbc', <Group 0x7f54acff6590>),\n",
+       "             ('d_720', <Group 0x7f54acff67d0>),\n",
+       "             ('hqlr', <Group 0x7f54acff6a10>),\n",
+       "             ('Au1_Cl', <Group 0x7f54acff6c10>),\n",
+       "             ('Au3_Cl_aq', <Group 0x7f54acff6e50>),\n",
+       "             ('ixde', <Group 0x7f54ad0060d0>),\n",
+       "             ('Au_cyanide', <Group 0x7f54ad006310>),\n",
+       "             ('nyux', <Group 0x7f54ad006550>),\n",
+       "             ('Au_sulphide', <Group 0x7f54ad006790>),\n",
+       "             ('Au_thiosulphate_aq', <Group 0x7f54ad0069d0>),\n",
+       "             ('ryzf', <Group 0x7f54ad006bd0>)])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the dictionary containing the loaded Groups can also be accessed directly\n",
+    "aprj.groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><tr><td><b>Group</b></td><td><b>Sel</b></td></tr><tr><td>ozun</td><td>✔</td></tr><tr><td>d_2_42</td><td>✔</td></tr><tr><td>d_4_73</td><td>✔</td></tr><tr><td>d_7_03</td><td>✔</td></tr><tr><td>d_9_33</td><td>✔</td></tr><tr><td>d_20</td><td>✔</td></tr><tr><td>rjbc</td><td>✔</td></tr><tr><td>d_720</td><td>✔</td></tr><tr><td>hqlr</td><td>✔</td></tr><tr><td>Au1_Cl</td><td>✔</td></tr><tr><td>Au3_Cl_aq</td><td>✔</td></tr><tr><td>ixde</td><td>✔</td></tr><tr><td>Au_cyanide</td><td>✔</td></tr><tr><td>nyux</td><td>✔</td></tr><tr><td>Au_sulphide</td><td>✔</td></tr><tr><td>Au_thiosulphate_aq</td><td>✔</td></tr><tr><td>ryzf</td><td>✔</td></tr></table>"
+      ],
+      "text/plain": [
+       "<Group 0x7f9e18ea5090>"
       ]
      },
      "execution_count": 4,
@@ -79,13 +103,14 @@
     }
    ],
    "source": [
-    "# the dictionary containing the loaded Groups can be accessed directly\n",
-    "aprj.groups"
+    "# if the groups have a `sel` attribute, it can be shown\n",
+    "aprj.show_sel = True\n",
+    "aprj"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,10 +119,10 @@
        "<table><tr><td><b>Group</b></td><td><b>Sel</b></td></tr><tr><td>ozun</td><td>✔</td></tr><tr><td>d_2_42</td><td></td></tr><tr><td>d_4_73</td><td></td></tr><tr><td>d_7_03</td><td></td></tr><tr><td>d_9_33</td><td></td></tr><tr><td>d_20</td><td>✔</td></tr><tr><td>rjbc</td><td>✔</td></tr><tr><td>d_720</td><td>✔</td></tr><tr><td>hqlr</td><td>✔</td></tr><tr><td>Au1_Cl</td><td>✔</td></tr><tr><td>Au3_Cl_aq</td><td>✔</td></tr><tr><td>ixde</td><td>✔</td></tr><tr><td>Au_cyanide</td><td>✔</td></tr><tr><td>nyux</td><td>✔</td></tr><tr><td>Au_sulphide</td><td>✔</td></tr><tr><td>Au_thiosulphate_aq</td><td>✔</td></tr><tr><td>ryzf</td><td></td></tr></table>"
       ],
       "text/plain": [
-       "<Group 0x7fa929b74210>"
+       "<Group 0x7f9e18ea5090>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
