--- a/doc/larch.bib
+++ b/doc/larch.bib
@@ -33,13 +33,13 @@
   title =  {XAFS.org},
   year  = 2003,
   key = {XAFS.org},
-  url = {{http://xafs.org}}}
+  url = {{https://xafs.org}}}
 
 @Misc{ixasportal,
   title =  {International X-ray Absorption Society},
   key  =  {IXAS},
   year = 2012,
-  url = {{http://www.ixasportal.net/}}}
+  url = {{https://www.ixasportal.net/}}}
 
 @article{ATOMS,
   author = {B. Ravel},
@@ -302,7 +302,7 @@ doi = {10.1107/S0909049504034193},
   volume={702},
   number={2},
   pages={970},
-  url = {http://stacks.iop.org/0004-637X/702/i=2/a=970},
+  url = {https://stacks.iop.org/0004-637X/702/i=2/a=970},
   doi = {0004-637X/702/i=2/a=970},
   year={2009},
 }
@@ -572,14 +572,14 @@ DOI = {{10.1016/j.elspec.2004.02.148}},
 Author = {Haskel, D.},
 Title = {FLUO},
 Year = {1999},
-url =  {{http://www.aps.anl.gov/~haskel/fluo.html}}
+url =  {{https://www.aps.anl.gov/~haskel/fluo.html}}
 }
 
 
 @Misc{minpack,
 Author = {Garbow, B. S. and Hillstrom, K. E. and M\'ore, J. J.},
 Title = {{MINPACK-1}},
-url= {{http://www.netlib.org/minpack}},
+url= {{https://www.netlib.org/minpack}},
 Year = {{1980}},
 }
 
@@ -625,21 +625,21 @@ DOI = {{10.1107/S0909049511031232}},
 @Misc{perl,
   author =  "Wall, L.",
   title =   "{Perl Programming Langauge}",
-  url = {{http://perl.org/}},
+  url = {{https://perl.org/}},
   year = 1997,
 }
 
 @Misc{python,
   author =  "G. von Rossum and F. L. Drake",
   title =   "{Python Reference Manual}",
-  url = {{http://python.org/}},
+  url = {{https://python.org/}},
   year = 2003,
 }
 
 @Misc{numpy,
   author =  "Oliphant, T. E.",
   title =   "{Numerical Python}",
-  url = {{http://numpy.scipy.org/}},
+  url = {{https://numpy.scipy.org/}},
   year = 2006,
 }
 
@@ -647,27 +647,27 @@ DOI = {{10.1107/S0909049511031232}},
   author =   "Jones, E. and Oliphant, T. and Peterson, P. and others",
   title =     {{SciPy}: Open source scientific tools for {Python}},
   year =      {2001},
-  url = {{http://scipy.org/}},
+  url = {{https://scipy.org/}},
 }
 
 @Misc{matplotlib,
   author =  "Hunter, J. D.",
   title =   "{matplotlib}",
-  url = {{http://matplotlib.sourceforge.net/}},
+  url = {{https://matplotlib.sourceforge.net/}},
   year = 2007,
 }
 
 @Misc{prestopronto,
   author =  "Prestipino, C.",
   title =   "{PrestoPronto}",
-  url = {{http://code.google.com/p/prestopronto/}},
+  url = {{https://code.google.com/p/prestopronto/}},
   year = 2011,
 }
 
 @Misc{sixpack,
   author =  "Webb, S. M.",
   title =   "{SixPack}",
-  url = {{http://sixpack.sams-xrays.com/}},
+  url = {{https://sixpack.sams-xrays.com/}},
   year = 2006,
 }
 
@@ -685,7 +685,7 @@ DOI = {{10.1107/S0909049511031232}},
  issn = {0001-0782},
  pages = {377--387},
  numpages = {11},
- doi = {http://doi.acm.org/10.1145/362384.362685},
+ doi = {https://doi.acm.org/10.1145/362384.362685},
  acmid = {362685},
  publisher = {ACM},
  address = {New York, NY, USA},
@@ -767,27 +767,27 @@ doi = {10.1107/S0909049599000795},
 @Misc{hdf_group,
 key = {HDF GROUP},
   title = {HDF GROUP - HDF5},
-  url = {{http://www.hdfgroup.org/HDF5/}},
+  url = {{https://www.hdfgroup.org/HDF5/}},
   year = 	 2012}
 
 
 @Misc{sqlite,
   author = 	 {Hipp, D. R.},
   title = 	 {SQLite},
-  url = {{http://www.sqlite.org.}},
+  url = {{https://www.sqlite.org}},
   year = 	 2012}
 
 @Misc{xasformat_mailing_list,
   key = {XAS Data Format Working Group},
   title = 	 "XASFORMAT mailing list",
-  url = {{http://millenia.cars.aps.anl.gov/mailman/listinfo/xasformat}},
+  url = {{https://millenia.cars.aps.anl.gov/mailman/listinfo/xasformat}},
   year = 	 2012}
 
 
 @Misc{lytle_database,
   author = 	 {Lytle, F. and Boyanov, B. and Segre, S.},
   title = 	 {Farrel Lytle XAFS Database},
-  url = {{http://ixs.iit.edu/database}},
+  url = {{https://ixs.iit.edu/database}},
   year = 	 1995
 }
 
@@ -817,6 +817,6 @@ title = {Comparison Among Several Numerical Integration Methods for Kramers-Kron
 volume = {42},
 month = {Aug},
 year = {1988},
-url = {http://as.osa.org/abstract.cfm?URI=as-42-6-952},
+url = {https://as.osa.org/abstract.cfm?URI=as-42-6-952},
 abstract = {Several numerical integration methods are compared in order to search out the most effective method for the Kramers-Kronig transformation, using the analytical formula of the Kramers-Kronig transformation of a Lorentzian function as a reference. The methods to be compared involve the use of (1) Maclaurin's formula, (2) trapezium formula, (3) Simpson's formula, and (4) successive double Fourier transform methods. It is found that Maclaurin's formula, in which no special approximation is necessary for the pole part of the integration, gives the most accurate results, and also that its computation time is short. Successive Fourier transform is less accurate than the other methods, but it takes the least time when used without zero-filling. These results have important relevance for programs used to obtain optical constant spectra and to analyze spectral data.},
 }
